--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Grayscale - Free One Page Theme for Bootstrap 3</title>
+    <title>Ghent Living Lab - Stuurgroep 26 mei</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" rel="stylesheet" type="text/css">
@@ -89,9 +89,9 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Intro</h2>
-                <p> <a href="http://www.timelab.org">Timelab</a> en <a href="http://www.idrops.be">iDrops</a> hebben zich geïnteresseerd getoond om actief mee te werken met Ghent Living Lab en deel uit te maken van de stuurgroep. Jelle Monstrey voert verder de gesprekken met beide organisaties en houdt de stuurgroep op de hoogte.</p>
+                <p> <a href="http://www.timelab.org" target="_blank">Timelab</a> en <a href="http://www.idrops.be" target="_blank">iDrops</a> hebben zich geïnteresseerd getoond om actief mee te werken met Ghent Living Lab en deel uit te maken van de stuurgroep. Jelle Monstrey voert verder de gesprekken met beide organisaties en houdt de stuurgroep op de hoogte.</p>
                 <div class="page-scroll">
-						<a href="#intro" class="btn btn-circle">
+						<a href="#terugblik" class="btn btn-circle">
 								<i class="fa fa-angle-double-down animated"></i>
                         </a>
                 </div>
@@ -277,8 +277,6 @@
             </div>
         </div>
     </section>
-
-    <div id="map"></div>
 
     <!-- Core JavaScript Files -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
