--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>GLL@Eurocities</h2>
-                <p> Van 27 tot 30 november 2013 vond in Gent een <a href="http://www.stedenconferentie2013.be/index.php">Stedenconferentie</a> en de <a href="http://wwww.eurocities2013.eu">Eurocities Annual Conference</a> plaats. Beiden met thema smart citizens. Een aantal GLL partners waren aanwezig op de infomarkt. Bleek dat de setting en opzet van de conferenties niet meteen geschikt waren voor een infomarkt. Wel succesvol waren de GLL workshops tijdens de Stedenconferentie (met Lieven De Marez en Jelle Monstrey) en Eurocities conferentie (geleid door Dimitri Schuurman).</p> 
+                <p> Van 27 tot 30 november 2013 vond in Gent een <a href="http://www.stedenconferentie2013.be/index.php">Stedenconferentie</a> en de <a href="http://www.eurocities2013.eu">Eurocities Annual Conference</a> plaats. Beiden met thema smart citizens. Een aantal GLL partners waren aanwezig op de infomarkt. Bleek dat de setting en opzet van de conferenties niet meteen geschikt waren voor een infomarkt. Wel succesvol waren de GLL workshops tijdens de Stedenconferentie (met Lieven De Marez en Jelle Monstrey) en Eurocities conferentie (geleid door Dimitri Schuurman).</p> 
             </div>
 	    </div>
     </section>
