--- a/index.html
+++ b/index.html
@@ -89,12 +89,7 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Intro</h2>
-                <p> <a href="http://www.timelab.org" target="_blank">Timelab</a> en <a href="http://www.idrops.be" target="_blank">iDrops</a> hebben zich geïnteresseerd getoond om actief mee te werken met Ghent Living Lab en deel uit te maken van de stuurgroep. Jelle Monstrey voert verder de gesprekken met beide organisaties en houdt de stuurgroep op de hoogte.</p>
-                <div class="page-scroll">
-						<a href="#terugblik" class="btn btn-circle">
-								<i class="fa fa-angle-double-down animated"></i>
-                        </a>
-                </div>
+                <p> <a href="http://www.timelab.org" target="_blank">Timelab</a> en <a href="http://www.idrops.be" target="_blank">iDrops</a> hebben zich geïnteresseerd getoond om actief mee te werken met Ghent Living Lab en deel uit te maken van de stuurgroep. Jelle Monstrey voert verder de gesprekken met beide organisaties en houdt de stuurgroep op de hoogte.<br/><br/><br/><br/></p>
             </div>
 		
         </div>
@@ -104,13 +99,14 @@
         <div class="terugblik-section">
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <h2>Terugblik</h2>
+                    <h1 class="brand-heading">Terugblik</h1>
                 </div>
             </div>
         </div>
     </section>
 	
-<section id="terugblik-apps4ghent" class="container content-section text-center">
+    <section id="terugblik-apps4ghent" class="content-section text-center">
+      <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Apps4Ghent</h2>
@@ -118,6 +114,7 @@
                 <p> Partners van Apps4Ghent zijn Open Knowledge Foundation Belgium, Stad Gent, iMinds, Ghent Web Valley en Digipolis. Meer weten? Meewerken? Mail naar <a href="mailto:bart.rosseau@gent.be">Bart Rosseau</a> of <a href="mailto:pieter.colpaert@okfn.org">Pieter Colpaert</a>. </p>   
             </div>
         </div>
+      </div>
     </section>
 	
 	<section id="terugblik-opensummerofcode" class="container content-section text-center">
@@ -149,7 +146,7 @@
                 <h2>Zwerm</h2>
                 <p> In februari en maart 2013 werd in de wijken Papegaai en Ekkergem het wijkspel Zwerm georganiseerd. Een ludiek en innovatief spel dat door de inzet van ICT buurtbewoners dichter bij elkaar wilde brengen en de gezelligheid en samenhorigheid van de buurt wilde ondersteunen. Elke week begon er een nieuwe campagne op zaterdag. Deze campagne duurde een week en tijdens deze week kon je punten verdienen door de opdrachten uit te voeren die de speleer konden vinden op de website. In elke wijk was een holle boom geplaatst, waarop spelers konden inloggen met de RFID kaart die ze in je bus hadden gekregen. In je wijken werden  op bepaalde punten mussen opgehangen. Door naar deze mussen te fluiten kon je punten verdienen, niet ten persoonlijke titel, maar voor de wijk in het algemeen.</p>
                 <p> <a href="http://www.vimeo.com/65648085">Hier</a> kan je een filmpje bekijken dat het één en ander duidelijk zal maken. Zwerm komt trouwens ook aan bod op <a href="http://www.tedxghent.be/events/tedxghent-2014/">TEDxGhent</a> op 7 juni. Betrokken partners bij Zwerm zijn: Stad Gent, Digipolis Gent, iMinds en Alcatel-Lucent.</p>
-				<p> Meer info over Zwerm? Mail naar <a href=mailto:"jelle.monstrey@gent.be">Jelle Monstrey</a> of <a href=mailto:"tanguy.coenen@iminds.be">Tanguy Coenen</a>.</p>
+				<p> Meer info over Zwerm? Mail naar <a href="mailto:jelle.monstrey@gent.be">Jelle Monstrey</a> of <a href="mailto:tanguy.coenen@iminds.be">Tanguy Coenen</a>.</p>
 			</div>
 		</div>
     </section>
@@ -173,21 +170,23 @@
 	    </div>
     </section>
 	
-	<section id="terugblik-advertenties" class="container content-section text-center">
+	<section id="terugblik-advertenties" class="content-section text-center">
+	 <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Advertentie Schamper en Zone09</h2>
                 <p> In het najaar van 2013 plaatsten we 4 advertenties in Schamper en Zone09 om panelleden te rekruteren.</p>
-				<p> Interesse om de advertenties te gebruiken in de eigen communicatiekanalen? Mail naar <a href=mailto:"jelle.monstrey@gent.be">Jelle Monstrey</a>.</p> 
+				<p> Interesse om de advertenties te gebruiken in de eigen communicatiekanalen? Mail naar <a href="mailto:jelle.monstrey@gent.be">Jelle Monstrey</a>.</p> 
             </div>
 		</div>
+	 </div>
     </section>
 	
 	<section id="blikvooruit" class="content-section text-center">
         <div class="blikvooruit-section">
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <h2>Blik vooruit</h2>
+                    <h1 class="brand-heading">Blik vooruit</h1>
                 </div>
             </div>
         </div>
@@ -199,13 +198,16 @@
                 <h2>De Krook en het Ghent Living Lab</h2>
                 <p><a href="http://www.dekrook.be">De Krook</a> wil een trefpunt, uitstalraam, experimenteerruimte en innovatienetwerk zijn voor de kruisbestuiving van cultuur, media, economie en digitale technologie, en zo uitgroeien tot een bruisende en boeiende aantrekkingspool in de stad, uniek in Europa, waar iedereen - van binnen en buiten Gent, uit binnen- en buitenland - kwaliteitsvolle, inspirerende, baanbrekende kennis en ontspanning komt zoeken, delen, co-creëren en co-produceren.
 					Krist Biebauw, directeur van de bibliotheek, gaf een presentatie over welke plek de nieuwe bibliotheek zal innemen binnen De Krook. De presentatie kan je <a href="http://www.slideshare.net/thimothoeye/20140526-de-krook-stuurgroep-gll-1">hier</a> bekijken.</p>
-				<p> De bibliotheek wil graag samenwerken met de partners van het Ghent Living Lab rond drie elementen: 
-
-					1)	Het actief ondersteunen van een recruteringscampagne voor GLL panelleden in het najaar van 2014. 
-					2)	Het openstellen van datasets, zodat een intensief traject in het kader van Apps4Ghent kan gevolgd worden.
-					3)	Via een aanbestedingsprocedure, samen met partners van het GLL (bijvoorbeeld UGent en de Hogescholen), hard- en software elementen ontwikkelen met een hoge innovatieve toegevoegde waarde. </p> 
+				<p> De bibliotheek wil graag samenwerken met de partners van het Ghent Living Lab rond drie elementen: </p>
+				  <p>
+				  <ul>
+					<li>Het actief ondersteunen van een recruteringscampagne voor GLL panelleden in het najaar van 2014. </li>
+					<li>Het openstellen van datasets, zodat een intensief traject in het kader van Apps4Ghent kan gevolgd worden.</li>
+					<li>Via een aanbestedingsprocedure, samen met partners van het GLL (bijvoorbeeld UGent en de Hogescholen), hard- en software elementen ontwikkelen met een hoge innovatieve toegevoegde waarde. </li> 
+					</ul>
+				  </p>
 				<p>De aanwezige leden van de stuurgroep zijn in elk geval erg enthousiast om hieraan mee te werken. En er werden al eerste ideeën geopperd. De agora van de bib kan bijvoorbeeld een soort GLL uitstalraam worden. Er is in elk geval nood aan een soort ideation track waar alvast MICT en OKFN zeker willen bij meehelpen. En natuurlijk kunnen we hier ook de eigen panelleden bij betrekken. 
-				Meedenken? Meewerken? Mail naar <a href=mailto:"katrien.vangoidsenhoven@gent.be"> Katrien Van Goidsenhoven</a> of <a href=mailto:"jelle.monstrey@gent.be">Jelle Monstrey</a>. </p>
+				Meedenken? Meewerken? Mail naar <a href="mailto:katrien.vangoidsenhoven@gent.be"> Katrien Van Goidsenhoven</a> of <a href="mailto:jelle.monstrey@gent.be">Jelle Monstrey</a>. </p>
             </div>
 		</div>
     </section>
@@ -215,7 +217,7 @@
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Idee sensornetwerk</h2>
                 <p> De Stad Gent is aan het nadenken om een sensorennetwerk uit te bouwen, samen met geïnteresseerde partners. In het kader van het project <a href="http://www.citadelonthemove.eu"> Citadel on the Move </a> worden binnenkort 2 sensornodes geïnstalleerd in samenwerking met <a href="http://www.sensolus.com">Sensolus</a>. Dit is slechts een eerste aanzet, een proberen wat werkt en wat niet. We ambiëren een heus sensornetwerk met lage investeringskost en grote beschikbaarheid van data. </p>
-				<p> Ideeën? Interesse om mee te denken?  Mail naar <a href=mailto:"thimo.thoeye@gent.be">Thimo Thoeye</a>.</p> 
+				<p> Ideeën? Interesse om mee te denken?  Mail naar <a href="mailto:thimo.thoeye@gent.be">Thimo Thoeye</a>.</p> 
             </div>
 		</div>
     </section>
@@ -225,7 +227,7 @@
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Digipolis en aanbestedingen</h2>
                 <p> Eind juni organiseert Digipolis een infosessie aan over het e-notification platform bij aanbestedingen door Digipolis van meer dan 30.000 euro excl. btw. Voor aanbestedingen van minder dan 30.000 euro excl. btw legt Digipolis een lijst aan van geïnteresseerde, potentiële leveranciers. En in september of oktober organiseert Digipolis een “meet the buyer with a twist”. Hier verneem je binnenkort nog meer over.</p>
-				<p> Deelnemen aan de infosessie? Wil je op de lijst van leveranciers? Meer info? Mail naar <a href=mailto:"martine.delannoy@digipolis.be">Martine Delannoy</a>.</p> 
+				<p> Deelnemen aan de infosessie? Wil je op de lijst van leveranciers? Meer info? Mail naar <a href="mailto:martine.delannoy@digipolis.be">Martine Delannoy</a>.</p> 
             </div>
 		</div>
     </section>
@@ -235,7 +237,7 @@
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Elektrisch autodelen in Gent</h2>
                 <p> Partago wil in Gent een nieuwe systeem van elektrisch autodelen vorm geven en uittesten. iLab.o en GLL slaan hiervoor de handen in elkaar. </p>
-				<p> Meer weten? Mail naar <a href=mailto:"tim.rootsaert@iminds.be">Tim Rootsaert</a>.</p> 
+				<p> Meer weten? Mail naar <a href="mailto:tim.rootsaert@iminds.be">Tim Rootsaert</a>.</p> 
             </div>
 		</div>
     </section>
@@ -245,7 +247,7 @@
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Workshop nieuwe gent.be</h2>
                 <p> Er wordt naarstig gebouwd aan een nieuwe stadswebsite. En alles begon overigens met een GLL workshop (bekijk <a href="https://www.youtube.com/watch?v=ZBsIogLIGFs&feature=youtu.be">hier</a> het filmpje). Op 18 juni organiseren Digipolis en de Stad Gent een GLL workshop rond de nieuwe stadswebsite. GLL panelleden worden uitgenodigd om hun opmerkingen en suggesties door te geven over de nog steeds in de steigers staande nieuwe stadswebsite. Eind augustus volgt er nog een workshop. </p>
-				<p> Meer informatie over het traject van de nieuwe gent.be? Mail naar <a href=mailto:"bart.rosseau@gent.be">Bart Rosseau</a>.</p> 
+				<p> Meer informatie over het traject van de nieuwe gent.be? Mail naar <a href="mailto:bart.rosseau@gent.be">Bart Rosseau</a>.</p> 
             </div>
 		</div>
     </section>
@@ -256,25 +258,27 @@
                 <h2>De nabije toekomst van het Ghent Living Lab</h2>
                 <p> De Stad Gent heeft middelen beschikbaar om in het najaar een GLL event te organiseren, gekoppeld aan een communicatiecampagne en het aanbieden van incentives aan (potentiële) GLL panelleden. Doel is om mensen warm te maken om het GLL panel te versterken. Daarbovenop zal er zeker vanaf 2015, maar misschien al vanaf 2014 een jaarlijks budget van 10.000 euro beschikbaar zijn om GLL gelinkte initiatieven financieel te ondersteunen. Hoe we die middelen inzetten, bespreken we graag samen met de GLL stuurgroep. Een belangrijke bedenking was alvast dat 10.000 euro op zich beperkt is en dat focus bij de besteding dus belangrijk zal zijn, voor een maximaal effect.</p>
 				<p> Doel van het Ghent Living Lab moet zijn om stakeholders samen te brengen en bewust te kiezen voor sociale innovatie. Om zo impact te hebben op het leven van de Gentenaar, vanuit de ICT gerichte insteek van het Ghent Living Lab. Een instrument dat hierbij kan helpen, is een jaarlijkse digimeter verwerken voor Gent. Het iLab.o panel en het Ghent Living Lab panel hoeven niet strikt gescheiden naast elkaar te bestaan, maar moeten samen kunnen worden ingezet voor bepaalde projecten. Aan de stuurgroep om hier praktische afspraken rond te maken. In elk geval is er nood aan meer concrete cases om mensen te bereiken. De stuurgroep was het erover eens dat De Krook hier een perfecte opportuniteit voor is.</p>
-				<p> Mee nadenken over de nabije toekomst van het Ghent Living Lab? Ideeën? Mail naar <a href=mailto:"jelle.monstrey@gent.be">Jelle Monstrey</a>. Binnenkort krijg je in elk geval meer informatie en aanzetten van scenario’s.</p>
+				<p> Mee nadenken over de nabije toekomst van het Ghent Living Lab? Ideeën? Mail naar <a href="mailto:jelle.monstrey@gent.be">Jelle Monstrey</a>. Binnenkort krijg je in elk geval meer informatie en aanzetten van scenario’s.</p>
             </div>
 		</div>
     </section>
 		
-    <section id="contact" class="container content-section text-center">
+    <section id="contact" class="content-section text-center">
+        <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h2>Contact</h2>
-                <p><a href=mailto:"jelle.monstrey@gent.be">Jelle Monstrey</a></p>
+                <h1 class="brand-heading">Contact</h1>
+                <p>Mail naar <a href="mailto:jelle.monstrey@gent.be">Jelle Monstrey</a></p>
                 <ul class="list-inline banner-social-buttons">
-                    <li><a href="http://www.twitter.com/ghentlivinglab1" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
+                    <li><a href="http://www.twitter.com/ghentlivinglab1" class="btn btn-default btn-lg" target="_blank"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
                     </li>
-                    <li><a href="http://www.facebook.com/ghentlivinglab" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
+                    <li><a href="http://www.facebook.com/ghentlivinglab" class="btn btn-default btn-lg" target="_blank"><i class="fa fa-facebook fa-fw"></i> <span class="network-name">Facebook</span></a>
                     </li>
-                    <li><a href="http://www.ghentlivinglab.be" class="btn btn-default btn-lg"><i class="fa fa-google-plus fa-fw"></i> <span class="network-name">Google+</span></a>
+                    <li><a href="http://www.ghentlivinglab.be" class="btn btn-default btn-lg" target="_blank"><i class="fa fa-external-link fa-fw"></i> <span class="network-name">Website</span></a>
                     </li>
                 </ul>
             </div>
+        </div>
         </div>
     </section>
 
@@ -282,9 +286,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.3/js/bootstrap.min.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
-
-    <!-- Google Maps API Key - You will need to use your own API key to use the map feature -->
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCRngKslUGJTlibkQ3FkfTxj3Xss1UlZDA&sensor=false"></script>
 
     <!-- Custom Theme JavaScript -->
     <script src="js/grayscale.js"></script>
